--- a/trunk/doc/report.bib
+++ b/trunk/doc/report.bib
@@ -79,10 +79,19 @@
 @techreport{memory,
     author = {Drepper, Ulrich},
     month = nov,
-    title = {What Every Programmer Should Know About Memory},
+    title = {{What Every Programmer Should Know About Memory}},
     url = {http://people.redhat.com/drepper/cpumemory.pdf},
     year = {2007}
 }
+
+@techreport{gregg,
+    author = {Brendan Gregg},
+    month = feb,
+    title = {{Linux Performance Analysis and Tools}},
+    url = {http://es.slideshare.net/brendangregg/linux-performance-analysis-and-tools},
+    year = {2013}
+}
+
 
 @book{patterns,
  author = {Mattson, Timothy and Sanders, Beverly and Massingill, Berna},
@@ -296,7 +305,7 @@
 
 @TECHREPORT{hpcc,
     author = {Piotr Luszczek and Jack J. Dongarra and David Koester and Rolf Rabenseifner and Bob Lucas and Jeremy Kepner and John Mccalpin and David Bailey and Daisuke Takahashi},
-    title = {Introduction to the HPC Challenge Benchmark Suite},
+    title = {{Introduction to the HPC Challenge Benchmark Suite}},
     year = {2005}
 }  
 
@@ -304,7 +313,7 @@
   author    = {Rafael Garabato and
                Victor Rosales and
                Andr{\'e}s Mor{\'e}},
-  title     = {Optimizing Latency in Beowulf Clusters},
+  title     = {{Optimizing Latency in Beowulf Clusters}},
   journal   = {CLEI Electron. J.},
   volume    = {15},
   number    = {3},
